First part almost completed

--- a/index.html
+++ b/index.html
@@ -5,14 +5,28 @@
 
 	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<link rel="stylesheet"  type="text/css" href="css/brainHome.css">
+	<script type="text/javascript" src="data/colorByTimestamp.json"></script>
+	<script type="text/javascript" src="data/sizebyTimestamp.json"></script>
+
+	<script type="text/javascript" src="js/pixelView.js"></script>
+	<script type="text/javascript" src="js/zoomView.js"></script>
+
+	<script type="text/javascript" src="js/groupsChooserView.js"></script>
 	<script type="text/javascript" src="js/mosaicView.js"></script>
+	<script type="text/javascript" src="js/timeLine.js"></script>
 
 
 	<script type="text/javascript" src="js/indexInit.js"></script>
 </head>
 <body onload="init()">
 	<div class="mainContainer">
-		<div id="mosaicDivContainer" class="mosaicDivContainer"></div>	
+		<div id="chooserDivContainer" class = "chooserDivContainer"> </div>
+		<div id="timelineDivContainer" class="timelineDivContainer"></div>	
+		<div id="mosaicDivContainer" class="mosaicDivContainer">
+			<div id="zoomDivContainer" class="zoomDivContainer">
+				
+			</div>
+		</div>	
 
 	</div>
 </body>
