--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script type="text/javascript" src="js/mosaicView.js"></script>
 	<script type="text/javascript" src="js/timeLine.js"></script>
 	<script type="text/javascript" src="js/d3.slider.js"></script>
+	<script type="text/javascript" src="js/starPlot.js"></script>
 
 	<script type="text/javascript" src="js/indexInit.js"></script>
 </head>
@@ -61,6 +62,8 @@
 		</div>	
 		<div id="mosaicDivContainerRight" class="mosaicDivContainerRight"></div>	
 		<div id="swordDivContainerRight" class="swordDivContainerRight"></div>
+		<div id="starPlotDivContainerLeft" class="starPlotDivContainerLeft"></div>	
+		<div id="starPlotDivContainerRight" class="starPlotDivContainerRight"></div>	
 	</div>
 </body>
 </html>
