overall Star Plot

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 		<div id="swordDivContainerRight" class="swordDivContainerRight"></div>
 		<div id="starPlotDivContainerLeft" class="starPlotDivContainerLeft"></div>	
 		<div id="starPlotDivContainerRight" class="starPlotDivContainerRight"></div>	
+
+		<div id="overallStarPlotDivContainerLeft" class="overallStarPlotDivContainerLeft"></div>	
+		<div id="overallStarPlotDivContainerRight" class="overallStarPlotDivContainerRight"></div>	
 	</div>
 </body>
 </html>
