--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Brain Network Visualization</title>
+	<title>RemBrain</title>
 
 	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 	<link rel="stylesheet"  type="text/css" href="css/brainHome.css">
@@ -61,14 +61,16 @@
 
 			<div id="actionChooserContainerDiv" class="actionChooserContainerDiv">
 					<form>
-				 	 	<input type="radio" name="gender" value="zoom" checked onclick="changeAction(this.value)" > Zoom<br>
-				  		<input type="radio" name="gender" value="sword" onclick="changeAction(this.value)"> Sword<br>
-				  		<input type="radio" name="gender" value="KNN" onclick="changeAction(this.value)"> KNN<br>
+						<input type="radio" name="gender" value="KNN" onclick="changeAction(this.value)"> Summary Star Plots<br>				 	 					  		
+				  		<input type="radio" name="gender" value="zoom" checked onclick="changeAction(this.value)" > Mosaic Matrix View<br>
+					    <input type="radio" name="gender" value="sword" onclick="changeAction(this.value)"> Individual Behavior View<br>
 					</form>
 			</div>
 			<div id="chooserDivContainer" class = "chooserDivContainer"> </div>
 		</div>
 
+        <div id="starPlotLegend" class="starPlotLegend"> </div>
+			
 		<div id="mosaicTopDivContainerLeft" class="mosaicTopDivContainerLeft">
 			<select id="dataOptionListLeft" name="dataLeft" onchange="changeLeftMosaicData()">
 				 <option value="Young40_a1"> Young40_a1</option>
