--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		<div id="overallStarPlotDivContainerLeft" class="overallStarPlotDivContainerLeft"></div>	
 		<div id="overallStarPlotDivContainerRight" class="overallStarPlotDivContainerRight"></div>	
 
-		<div id = "knnDivContainer" class="knnDivContainer"> </div>
+		<div id = "knnDivContainer" class="knnDivContainer" style="visibility: hidden"> </div>
 	</div>
 
 
